--- a/housePriceAnaliseXGB.ipynb
+++ b/housePriceAnaliseXGB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -43,10 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "id": "06b3ed4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X table size: (1460, 110)\n",
+      "NA: 0\n"
+     ]
+    }
+   ],
    "source": [
     "X = train_df[[\n",
     "    'MSSubClass',\n",
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
@@ -119,17 +128,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "id": "11e3cb74",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/renertt/Документы/Machine Learning/housePriceML/venv/lib/python3.10/site-packages/xgboost/training.py:183: UserWarning: [19:36:14] WARNING: /workspace/src/context.cc:49: No visible GPU is found, setting device to CPU.\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n",
+      "/home/renertt/Документы/Machine Learning/housePriceML/venv/lib/python3.10/site-packages/xgboost/training.py:183: UserWarning: [19:36:14] WARNING: /workspace/src/context.cc:203: XGBoost is not compiled with CUDA support.\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training finished in: 16.150 seconds\n",
+      "MedinAverage error 16,948.00 dollars\n",
+      "\n",
+      "Importance:\n",
+      "base_feature\n",
+      "Neighborhood    0.238970\n",
+      "OverallQual     0.162202\n",
+      "Foundation      0.114833\n",
+      "MSSubClass      0.079554\n",
+      "Exterior1st     0.061710\n",
+      "PoolQC          0.050728\n",
+      "MSZoning        0.049768\n",
+      "GarageQual      0.046253\n",
+      "Condition1      0.043824\n",
+      "GrLivArea       0.038085\n",
+      "Functional      0.029001\n",
+      "YearRemodAdd    0.017558\n",
+      "HeatingQC       0.016469\n",
+      "Fence           0.012240\n",
+      "ExterCond       0.010617\n",
+      "LotArea         0.010110\n",
+      "OverallCond     0.006811\n",
+      "Electrical      0.004808\n",
+      "MiscFeature     0.004567\n",
+      "MiscVal         0.001892\n",
+      "Name: importance, dtype: float32\n"
+     ]
+    }
+   ],
    "source": [
     "housePriceModelXGB = XGBRegressor(\n",
-    "    n_estimators=2000,\n",
-    "    learning_rate=0.01,\n",
+    "    n_estimators=25000,\n",
+    "    learning_rate=0.001,\n",
     "    max_depth=5,\n",
     "    subsample=0.8,\n",
-    "    colsample_bytree=0.8,\n",
+    "    colsample_bytree=0.6,\n",
     "    n_jobs=-1,\n",
     "    random_state=42,\n",
     "    device='cuda',\n",
@@ -163,10 +216,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "46da69d8",
+   "execution_count": 156,
+   "id": "35e1d243",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model mistaken by: 9.34 %\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Model mistaken by:\",round((mae / np.mean(Y_train)) * 100, 2), \"%\")\n",
     "#print(\"Model mistaken by:\",((mae / np.mean(Y_train)) * 100), \"%\")"
