--- a/housePriceAnaliseXGB.ipynb
+++ b/housePriceAnaliseXGB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 1,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 2,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 3,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 4,
    "id": "06b3ed4a",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 5,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 6,
    "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
@@ -128,57 +128,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 7,
    "id": "11e3cb74",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Training finished in: 22.575 seconds\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/renertt/Документы/Machine Learning/housePriceML/venv/lib/python3.10/site-packages/xgboost/training.py:183: UserWarning: [19:36:14] WARNING: /workspace/src/context.cc:49: No visible GPU is found, setting device to CPU.\n",
-      "  bst.update(dtrain, iteration=i, fobj=obj)\n",
-      "/home/renertt/Документы/Machine Learning/housePriceML/venv/lib/python3.10/site-packages/xgboost/training.py:183: UserWarning: [19:36:14] WARNING: /workspace/src/context.cc:203: XGBoost is not compiled with CUDA support.\n",
-      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+      "/home/renertt/Документы/Machine Learning/housePriceML/venv/lib/python3.10/site-packages/xgboost/core.py:729: UserWarning: [21:04:41] WARNING: /workspace/src/common/error_msg.cc:58: Falling back to prediction using DMatrix due to mismatched devices. This might lead to higher memory usage and slower performance. XGBoost is running on: cuda:0, while the input data is on: cpu.\n",
+      "Potential solutions:\n",
+      "- Use a data structure that matches the device ordinal in the booster.\n",
+      "- Set the device for booster before call to inplace_predict.\n",
+      "\n",
+      "This warning will only be shown once.\n",
+      "\n",
+      "  return func(**kwargs)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Training finished in: 16.150 seconds\n",
-      "MedinAverage error 16,948.00 dollars\n",
+      "MedinAverage error 16,963.81 dollars\n",
       "\n",
       "Importance:\n",
       "base_feature\n",
-      "Neighborhood    0.238970\n",
-      "OverallQual     0.162202\n",
-      "Foundation      0.114833\n",
-      "MSSubClass      0.079554\n",
-      "Exterior1st     0.061710\n",
-      "PoolQC          0.050728\n",
-      "MSZoning        0.049768\n",
-      "GarageQual      0.046253\n",
-      "Condition1      0.043824\n",
-      "GrLivArea       0.038085\n",
-      "Functional      0.029001\n",
-      "YearRemodAdd    0.017558\n",
-      "HeatingQC       0.016469\n",
-      "Fence           0.012240\n",
-      "ExterCond       0.010617\n",
-      "LotArea         0.010110\n",
-      "OverallCond     0.006811\n",
-      "Electrical      0.004808\n",
-      "MiscFeature     0.004567\n",
-      "MiscVal         0.001892\n",
+      "Neighborhood    0.238373\n",
+      "OverallQual     0.156274\n",
+      "Foundation      0.125188\n",
+      "MSSubClass      0.081317\n",
+      "Exterior1st     0.060956\n",
+      "PoolQC          0.048255\n",
+      "MSZoning        0.048145\n",
+      "GarageQual      0.046738\n",
+      "Condition1      0.042844\n",
+      "GrLivArea       0.036786\n",
+      "Functional      0.029565\n",
+      "YearRemodAdd    0.016602\n",
+      "HeatingQC       0.016144\n",
+      "Fence           0.012143\n",
+      "ExterCond       0.010301\n",
+      "LotArea         0.010225\n",
+      "OverallCond     0.006912\n",
+      "MiscFeature     0.005778\n",
+      "Electrical      0.005577\n",
+      "MiscVal         0.001878\n",
       "Name: importance, dtype: float32\n"
      ]
     }
    ],
    "source": [
     "housePriceModelXGB = XGBRegressor(\n",
-    "    n_estimators=25000,\n",
+    "    n_estimators=26000,\n",
     "    learning_rate=0.001,\n",
     "    max_depth=5,\n",
     "    subsample=0.8,\n",
@@ -216,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 8,
    "id": "35e1d243",
    "metadata": {},
    "outputs": [
@@ -224,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model mistaken by: 9.34 %\n"
+      "Model mistaken by: 9.35 %\n"
      ]
     }
    ],
