refactor, added 'run.py'

--- a/models/housePriceAnaliseRF.ipynb
+++ b/models/housePriceAnaliseRF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,13 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "import numpy as np\n",
-    "import time"
+    "import time\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 23,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 24,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 25,
    "id": "06b3ed4a",
    "metadata": {},
    "outputs": [
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 26,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 27,
    "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 28,
    "id": "11e3cb74",
    "metadata": {},
    "outputs": [
@@ -145,7 +146,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Training finished in: 5.020 seconds\n",
+      "Training finished in: 4.046 seconds\n",
       "MedinAverage error 20,628.55 dollars\n",
       "\n",
       "Importance:\n",
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 29,
    "id": "46da69d8",
    "metadata": {},
    "outputs": [
@@ -226,8 +227,25 @@
     }
    ],
    "source": [
-    "print(\"Model mistaken by:\",round((mae / np.mean(Y_train)) * 100, 2), \"%\")\n",
+    "mape = round((mae / np.mean(Y_train)) * 100, 2)\n",
+    "print(\"Model mistaken by:\", mape, \"%\")\n",
     "#print(\"Model mistaken by:\",((mae / np.mean(Y_train)) * 100), \"%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ed51739",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_data = {\n",
+    "    \"modelName\": \"RandomForest\",\n",
+    "    \"mape\": mape\n",
+    "}\n",
+    "\n",
+    "with open('collectedData/resultsRF.json', 'w') as f:\n",
+    "    json.dump(result_data, f)"
    ]
   }
  ],
