--- a/models/housePriceAnaliseXGB.ipynb
+++ b/models/housePriceAnaliseXGB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,13 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "import numpy as np\n",
-    "import time"
+    "import time\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -43,19 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "06b3ed4a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X table size: (1460, 110)\n",
-      "NA: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = train_df[[\n",
     "    'MSSubClass',\n",
@@ -108,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
@@ -128,64 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "11e3cb74",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Training finished in: 22.575 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/renertt/Документы/Machine Learning/housePriceML/venv/lib/python3.10/site-packages/xgboost/core.py:729: UserWarning: [21:04:41] WARNING: /workspace/src/common/error_msg.cc:58: Falling back to prediction using DMatrix due to mismatched devices. This might lead to higher memory usage and slower performance. XGBoost is running on: cuda:0, while the input data is on: cpu.\n",
-      "Potential solutions:\n",
-      "- Use a data structure that matches the device ordinal in the booster.\n",
-      "- Set the device for booster before call to inplace_predict.\n",
-      "\n",
-      "This warning will only be shown once.\n",
-      "\n",
-      "  return func(**kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MedinAverage error 16,963.81 dollars\n",
-      "\n",
-      "Importance:\n",
-      "base_feature\n",
-      "Neighborhood    0.238373\n",
-      "OverallQual     0.156274\n",
-      "Foundation      0.125188\n",
-      "MSSubClass      0.081317\n",
-      "Exterior1st     0.060956\n",
-      "PoolQC          0.048255\n",
-      "MSZoning        0.048145\n",
-      "GarageQual      0.046738\n",
-      "Condition1      0.042844\n",
-      "GrLivArea       0.036786\n",
-      "Functional      0.029565\n",
-      "YearRemodAdd    0.016602\n",
-      "HeatingQC       0.016144\n",
-      "Fence           0.012143\n",
-      "ExterCond       0.010301\n",
-      "LotArea         0.010225\n",
-      "OverallCond     0.006912\n",
-      "MiscFeature     0.005778\n",
-      "Electrical      0.005577\n",
-      "MiscVal         0.001878\n",
-      "Name: importance, dtype: float32\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "housePriceModelXGB = XGBRegressor(\n",
     "    n_estimators=26000,\n",
@@ -226,21 +164,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "35e1d243",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model mistaken by: 9.35 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"Model mistaken by:\",round((mae / np.mean(Y_train)) * 100, 2), \"%\")\n",
+    "mape = round((mae / np.mean(Y_train)) * 100, 2)\n",
+    "print(\"Model mistaken by:\", mape, \"%\")\n",
     "#print(\"Model mistaken by:\",((mae / np.mean(Y_train)) * 100), \"%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "246d9aaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_data = {\n",
+    "    \"modelName\": \"XGBoost\",\n",
+    "    \"mape\": mape\n",
+    "}\n",
+    "\n",
+    "with open('collectedData/resultsXGB.json', 'w') as f:\n",
+    "    json.dump(result_data, f)"
    ]
   }
  ],
