Advanced file path

--- a/models/housePriceAnaliseRF.ipynb
+++ b/models/housePriceAnaliseRF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "4cf0b8b9",
    "metadata": {},
    "outputs": [],
@@ -14,22 +14,33 @@
     "from sklearn.metrics import mean_absolute_error\n",
     "import numpy as np\n",
     "import time\n",
-    "import json"
+    "import json\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "22b9cd6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv('data/train.csv')"
+    "try:\n",
+    "    current_dir = os.path.dirname(os.path.abspath(__file__))\n",
+    "except NameError:\n",
+    "    current_dir = os.getcwd()\n",
+    "\n",
+    "data_path = os.path.join(current_dir, '..', 'data', 'train.csv')\n",
+    "\n",
+    "if not os.path.exists(data_path):\n",
+    "    data_path = os.path.join(current_dir, 'data', 'train.csv')\n",
+    "\n",
+    "train_df = pd.read_csv(data_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "226426bf",
    "metadata": {},
    "outputs": [],
@@ -44,19 +55,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "06b3ed4a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X table size: (1460, 110)\n",
-      "NA: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = train_df[[\n",
     "    'MSSubClass',\n",
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "d6acbada",
    "metadata": {},
    "outputs": [],
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "c4775bbc",
    "metadata": {},
    "outputs": [],
@@ -129,52 +131,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "11e3cb74",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/renertt/Документы/Machine Learning/housePriceML/venv/lib/python3.10/site-packages/sklearn/base.py:1365: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-      "  return fit_method(estimator, *args, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Training finished in: 4.046 seconds\n",
-      "MedinAverage error 20,628.55 dollars\n",
-      "\n",
-      "Importance:\n",
-      "base_feature\n",
-      "OverallQual     0.196600\n",
-      "GrLivArea       0.182282\n",
-      "Neighborhood    0.115569\n",
-      "LotArea         0.096518\n",
-      "YearRemodAdd    0.089928\n",
-      "Foundation      0.071727\n",
-      "MSSubClass      0.057885\n",
-      "Exterior1st     0.045428\n",
-      "MSZoning        0.024404\n",
-      "HeatingQC       0.021536\n",
-      "GarageQual      0.020632\n",
-      "OverallCond     0.018429\n",
-      "Fence           0.012807\n",
-      "Condition1      0.010965\n",
-      "ExterCond       0.010187\n",
-      "Functional      0.008139\n",
-      "PoolQC          0.007423\n",
-      "Electrical      0.006658\n",
-      "MiscFeature     0.001687\n",
-      "MiscVal         0.001195\n",
-      "Name: importance, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "housePriceModel = RandomForestRegressor(\n",
     "    n_estimators=5500,\n",
@@ -214,18 +174,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "46da69d8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model mistaken by: 11.37 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mape = round((mae / np.mean(Y_train)) * 100, 2)\n",
     "print(\"Model mistaken by:\", mape, \"%\")\n",
@@ -239,13 +191,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_data = {\n",
+    "resultData = {\n",
     "    \"modelName\": \"RandomForest\",\n",
     "    \"mape\": mape\n",
     "}\n",
     "\n",
-    "with open('collectedData/resultsRF.json', 'w') as f:\n",
-    "    json.dump(result_data, f)"
+    "try:\n",
+    "    current_dir = os.path.dirname(os.path.abspath(__file__))\n",
+    "except NameError:\n",
+    "    current_dir = os.getcwd()\n",
+    "\n",
+    "collectedDataPath = os.path.join(current_dir, '..', 'collectedData', 'resultsRF.json')\n",
+    "\n",
+    "if not os.path.exists(collectedDataPath):\n",
+    "    collectedDataPath = os.path.join(current_dir, 'collectedData', 'resultsRF.json')\n",
+    "\n",
+    "with open(collectedDataPath, 'w') as f:\n",
+    "    json.dump(resultData, f)"
    ]
   }
  ],
