--- a/models/housePriceAnaliseXGB.ipynb
+++ b/models/housePriceAnaliseXGB.ipynb
@@ -14,7 +14,8 @@
     "from sklearn.metrics import mean_absolute_error\n",
     "import numpy as np\n",
     "import time\n",
-    "import json"
+    "import json\n",
+    "import os"
    ]
   },
   {
@@ -24,7 +25,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv('data/train.csv')"
+    "try:\n",
+    "    current_dir = os.path.dirname(os.path.abspath(__file__))\n",
+    "except NameError:\n",
+    "    current_dir = os.getcwd()\n",
+    "\n",
+    "data_path = os.path.join(current_dir, '..', 'data', 'train.csv')\n",
+    "\n",
+    "if not os.path.exists(data_path):\n",
+    "    data_path = os.path.join(current_dir, 'data', 'train.csv')\n",
+    "\n",
+    "train_df = pd.read_csv(data_path)"
    ]
   },
   {
@@ -181,13 +192,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_data = {\n",
+    "resultData = {\n",
     "    \"modelName\": \"XGBoost\",\n",
     "    \"mape\": mape\n",
     "}\n",
     "\n",
-    "with open('collectedData/resultsXGB.json', 'w') as f:\n",
-    "    json.dump(result_data, f)"
+    "try:\n",
+    "    current_dir = os.path.dirname(os.path.abspath(__file__))\n",
+    "except NameError:\n",
+    "    current_dir = os.getcwd()\n",
+    "\n",
+    "collectedDataPath = os.path.join(current_dir, '..', 'collectedData', 'resultsXGB.json')\n",
+    "\n",
+    "if not os.path.exists(collectedDataPath):\n",
+    "    collectedDataPath = os.path.join(current_dir, 'collectedData', 'resultsXGB.json')\n",
+    "\n",
+    "with open(collectedDataPath, 'w') as f:\n",
+    "    json.dump(resultData, f)"
    ]
   }
  ],
