Getting ready for model mixing

--- a/modelsInfo/models/housePriceAnaliseRF.ipynb
+++ b/modelsInfo/models/housePriceAnaliseRF.ipynb
@@ -177,6 +177,7 @@
     "if rootCheck == True:\n",
     "    resultData = {\n",
     "        \"modelName\": \"RandomForest\",\n",
+    "        \"mae\" : mae,\n",
     "        \"mape\": mape\n",
     "    }\n",
     "\n",
