--- a/modelsInfo/models/housePriceAnaliseLGB.ipynb
+++ b/modelsInfo/models/housePriceAnaliseLGB.ipynb
@@ -134,9 +134,9 @@
     "housePriceModelLGB = lgb.LGBMRegressor(\n",
     "    n_estimators=10000,\n",
     "    learning_rate=0.001,\n",
-    "    max_depth=5,\n",
+    "    max_depth=None,\n",
     "    subsample=0.8,\n",
-    "    colsample_bytree=0.6,\n",
+    "    colsample_bytree=0.9,\n",
     "    n_jobs=-1,\n",
     "    random_state=42,\n",
     "    #device='cuda',\n",
@@ -172,7 +172,9 @@
     "if rootCheck == True:\n",
     "    resultData = {\n",
     "        \"modelName\": \"LGBoost\",\n",
-    "        \"mape\": mape\n",
+    "        \"mae\" : mae,\n",
+    "        \"mape\": mape,\n",
+    "        \"predictions\" : predictions\n",
     "    }\n",
     "\n",
     "    resultsDir = 'modelsInfo/collectedData'\n",
