Finalize README with project summary

--- a/modelsInfo/models/housePriceAnaliseLGB.ipynb
+++ b/modelsInfo/models/housePriceAnaliseLGB.ipynb
@@ -172,9 +172,8 @@
     "if rootCheck == True:\n",
     "    resultData = {\n",
     "        \"modelName\": \"LGBoost\",\n",
-    "        \"mae\" : mae,\n",
-    "        \"mape\": mape,\n",
-    "        \"predictions\" : predictions\n",
+    "        \"mae\" : int(mae),\n",
+    "        \"mape\": mape\n",
     "    }\n",
     "\n",
     "    resultsDir = 'modelsInfo/collectedData'\n",
