--- a/modelsInfo/models/housePriceAnaliseXGB.ipynb
+++ b/modelsInfo/models/housePriceAnaliseXGB.ipynb
@@ -183,7 +183,7 @@
     "if rootCheck == True:\n",
     "    resultData = {\n",
     "        \"modelName\": \"XGBoost\",\n",
-    "        \"mae\" : mae,\n",
+    "        \"mae\" : int(mae),\n",
     "        \"mape\": mape\n",
     "    }\n",
     "\n",
